Merge Epic users groups management into development